--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,3 +27,12 @@
 .btn-primary{
     @apply w-full text-sm text-white bg-violet-500 shadow-lg shadow-purple-600/5 p-[10px] rounded-md my-1 hover:bg-purple-600/20 hover:text-purple-600;
 }
+
+.card{
+    @apply bg-white p-6 rounded-2xl shadow-md shadow-gray-100 border
+    border-gray-200/50 ;
+}
+
+.card-btn{
+    @apply flex items-center gap-3 text-[12px] text-gray-700  bg-gray-50 hover:text-purple-500  hover:bg-purple-300 px-4 py-1.5 rounded-lg border border-gray-200/50 cursor-pointer;
+}
